bison-parser/examples/ill_typed/bad6.sa
module X
       x : bool init false;
       c : clock;
       [a!] true @ c -> (c' = uniform(4, 5));
endmodule

module Y
       x : bool init false;
       c : clock;
       [a!] true @ c -> (c' = uniform(4, 5)) & (c' = erlang(4, 6));
endmodule